# devops

./: AGENTS.md  CLAUDE.md  PR_REVIEW.md  QWEN.md  README.md  VERSION  VERSIONS.md  deploy-to-template.sh  pyproject.toml  run-component.py
.claude/commands/: project-setup.md
.github/: copilot-instructions.md
.github/workflows/: test-environments.yml  version-management.yml
.multiagent/: components.json
.multiagent/templates/: AGENTS.md  CLAUDE.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
components/agentswarm/: README.md  VERSION  pyproject.toml  src
components/testing/: README.md  VERSION  pyproject.toml  src
ops/: ops
ops/commands/: performance-monitor.sh
scripts/: intelligent-auto-deploy.sh
specs/001-copilot-or-claude/: DEVOPS_IMPROVEMENT_PLAN.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-updated.md  tasks.md
specs/001-copilot-or-claude/contracts/: ops-deploy-plan.json  ops-qa.json  ops-spec-init.json  ops-swarm-deploy.json
src/multiagent_devops/: __init__.py  agent_capabilities.py  cli.py  example_docker_usage.py  spec_analyzer.py
src/multiagent_devops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/multiagent_devops/integrations/: agentswarm.py
src/multiagent_devops/models/: __init__.py  agent_swarm.py  deployment_plan.py  qa_report.py  spec.py  task.py
src/multiagent_devops/ops/: ops
src/multiagent_devops/ops/commands/: deploy_plan.py  founder_mode.py  health-check.sh  qa.py  spec_init.py  swarm_deploy.py
tests/: quickstart_validation.py
tests/contract/: test_ops_deploy_plan.py  test_ops_qa.py  test_ops_spec_init.py  test_ops_swarm_deploy.py
tests/integration/: test_deployment.py  test_qa_validation.py  test_spec_init.py  test_swarm_deploy.py  test_swarm_monitoring.py
tests/performance/: test_cli_commands.py
tests/unit/: test_models.py
